<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Master switch to enable/disable hydration reminders -->
    <SwitchPreferenceCompat
        android:key="hydration_enabled"
        android:title="@string/pref_hydration_enabled_title"
        android:summary="@string/pref_hydration_enabled_summary"
        android:defaultValue="true" />

    <!-- Interval in minutes between reminders -->
    <EditTextPreference
        android:key="hydration_interval"
        android:title="@string/pref_hydration_interval_title"
        android:dialogTitle="@string/pref_hydration_interval_dialog"
        android:defaultValue="60"
        android:inputType="number"
        app:useSimpleSummaryProvider="false"
        android:summary="@string/pref_summary_hydration_interval" />

</PreferenceScreen>
