<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_percent"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textProgress"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginEnd="@dimen/spacing"
        android:layout_marginTop="8dp"/>

    <!-- Steps counter (transient UI while fragment visible) -->
    <TextView
        android:id="@+id/textSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_today"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginTop="8dp" />

    <!-- Empty state message shown when there are no habits -->
    <TextView
        android:id="@+id/textEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_habits"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textSteps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginEnd="@dimen/spacing" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHabits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textEmpty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        app:srcCompat="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>
